# scrap-binding

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  lib.c
include/: scrap_binding.h  scrap_binding_tools.h
src/: lib.rs
